[package]
name = "order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="^1.29", features=["rt", "rt-multi-thread", "net", "macros", "signal"]}
serde = {version="^1.0", features=["derive", "rc"]}
serde_json = "^1.0"
async-trait = "^0.1.72"

http = "^0.2.12"
http-body = "^0.4.6"
tower = {version="^0.4.13", features=["log", "limit", "util"]}
tower-http = {version="^0.4.3", features=["cors", "limit", "auth", "util"]}

# TODO, upgrade `hyper` to version 1.x
hyper = {version="^0.14.26", features=["server", "client", "runtime", "tcp", "http1"]}
axum = {version="^0.6.19", features=["macros", "headers"]}
chrono  = {version="0.4.31", features=["std", "alloc", "serde"]}
log = "0.4"

## `uuid` internally uses `rand` without making the random-sequence-generating
## function public, this app has to explicitly import the crate
rand = "0.8"
uuid = {version="^1.6.1", features=["v8"]}

tracing = {version="0.1", default-features=true}
regex = "1.9.6"

jsonwebtoken = "9.2"

# required by the trait method `Executor::fetch()` in `sqlx`
futures-util = {version="^0.3.19", features=["std"]}

ecommerce-common = {version="^0.1.0", path="../common/rust"}

# TODO, In sqlx v0.7.x pool may fail to recycle connections dropped by app callers
# and this happenes occasionally , currently downgrade to 0.6.x, I'll switch to
# 0.7.x once the issue is resolved.
# [reference] issues 2567 in sqlx github
sqlx = {version="^0.6.3", features=["runtime-tokio-native-tls", "chrono"]}

# TODO, due to hardware memory constraint, currently I do not use migrate
# feature, instead I use external tool `liquibase` for db migration.
## sqlx-cli = {version="^0.6.3", features=["native-tls", "mysql"]}

amqprs = {version="^1.5", optional=true, features=[]}

[features]
mariadb = ["sqlx/mysql"]
amqprs = ["dep:amqprs"]

[[test]]
name = "unittest"
path = "./tests/unit/mod.rs"
test = true

