[package]
name = "order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="^1.32", features=["rt", "rt-multi-thread", "net", "macros", "signal"]}
serde = {version="^1.0", features=["derive", "rc"]}
serde_json = "^1.0"
async-trait = "^0.1.72"

http = "^0.2.12"
http-body = "^0.4.6"
tower = {version="^0.4.13", features=["log", "limit", "util"]}
tower-http = {version="^0.4.3", features=["cors", "limit", "auth", "util"]}

# TODO, upgrade `hyper` to version 1.x
hyper = {version="^0.14.26", features=["server", "client", "runtime", "tcp", "http1"]}
axum = {version="^0.6.19", features=["macros", "headers"]}
chrono  = {version="0.4.31", features=["std", "alloc", "serde"]}
log = "0.4"

## `uuid` internally uses `rand` without making the random-sequence-generating
## function public, this app has to explicitly import the crate
rand = "0.8"
uuid = {version="^1.6.1", features=["v8"]}

tracing = {version="0.1", default-features=true}

jsonwebtoken = "9.3"

# required by the trait method `Executor::fetch()` in `sqlx`
futures-util = {version="^0.3.19", features=["std"]}

ecommerce-common = {version="^0.1.0", path="../common/rust"}

# Note,
# - feature `decimal` reuses dependency crate `rust_decimal`
# - In `sqlx` v0.7.x pool failed to recycle connections dropped by app callers
#   and this happenes occasionally, latest version 0.7.4 does not seem to resolve
#   this issue when number of connections increases,
# - [reference] issues 2567, discussion 3232 in sqlx github
# - TODO, upgrade directly to v8.x 
sqlx = {version="=0.8.3", default-features=false, features=["any", "json", "macros", "runtime-tokio-native-tls", "chrono", "rust_decimal"]}
deadpool = {version="^0.12", default-features=false, features=["managed", "rt_tokio_1"]}

# TODO, due to hardware memory constraint, currently I do not use migrate
# feature, instead I use external tool `liquibase` for db migration.
## sqlx-cli = {version="^0.6.3", features=["native-tls", "mysql"]}

# secure connections for interaction with 3rd party services
# e.g. currency exchange-rate service
tokio-native-tls = "^0.3"

# currency, amount of order lines, exchange rate, will be saved and
# represented in the `Decimal` type in this project
rust_decimal = {version="^1.35", default-features=false, features=[]}

amqprs = {version="^1.5", optional=true, features=[]}

[features]
mariadb = ["sqlx/mysql"]
amqprs = ["dep:amqprs"]

[[test]]
name = "unittest"
path = "./tests/unit/mod.rs"
test = true

