[package]
name = "order"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="^1.47", features=["rt", "rt-multi-thread", "net", "macros", "signal"]}
serde = {version="^1.0", features=["derive", "rc"]}
serde_json = "^1.0"
async-trait = "^0.1.89"

http = "^1.3.1"
http-body = "^1.0.1"
http-body-util = "^0.1.3"
headers = "^0.4.1"
tower = {version="^0.5.2", features=["log", "limit", "util"]}
tower-http = {version="^0.6.6", features=["cors", "limit", "auth", "util"]}

# TODO, switch to http2
hyper-util = {version="^0.1.17", features=["tokio", "server", "http1"]}
hyper = {version="^1.7.0", features=["server", "client", "http1"]}
axum = {version="^0.8.6", features=["macros"]}
axum-extra = {version="^0.10.3", features=["typed-header"]}

chrono  = {version="0.4.31", features=["std", "alloc", "serde"]}
log = "0.4.28"

## `uuid` internally uses `rand` without making the random-sequence-generating
## function public, this app has to explicitly import the crate
rand = "0.9.2"
uuid = {version="^1.18.1", features=["v8"]}

tracing = {version="^0.1", default-features=true}

jsonwebtoken = "^9.3.1"

# required by the trait method `Executor::fetch()` in `sqlx`
futures-util = {version="^0.3.19", features=["std"]}

ecommerce-common = {version="^0.1.0", path="../common/rust"}

# Note,
# - feature `decimal` reuses dependency crate `rust_decimal`
# - In `sqlx` v0.7.x pool failed to recycle connections dropped by app callers
#   and this happenes occasionally, latest version 0.7.4 does not seem to resolve
#   this issue when number of connections increases,
# - [reference] issues 2567, discussion 3232 in sqlx github
# - TODO, upgrade directly to v8.x 
sqlx = {version="=0.8.6", default-features=false, features=["any", "json", "macros", "runtime-tokio-native-tls", "chrono", "rust_decimal"]}
deadpool = {version="^0.12", default-features=false, features=["managed", "rt_tokio_1"]}

# TODO, due to hardware memory constraint, currently I do not use migrate
# feature, instead I use external tool `liquibase` for db migration.
## sqlx-cli = {version="^0.6.3", features=["native-tls", "mysql"]}

# secure connections for interaction with 3rd party services
# e.g. currency exchange-rate service
tokio-native-tls = "^0.3"

# currency, amount of order lines, exchange rate, will be saved and
# represented in the `Decimal` type in this project
rust_decimal = {version="^1.35", default-features=false, features=[]}

amqprs = {version="^2.1", optional=true, features=[]}

[features]
mariadb = ["sqlx/mysql"]
amqprs = ["dep:amqprs"]

[[test]]
name = "unittest"
path = "./tests/unit/mod.rs"
test = true

