[package]
name = "payment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="^1.0" , features=["derive"]}
serde_json = {version="^1.0" , features=["std"]}
chrono  = {version="^0.4.38", features=["std", "serde"]}

tracing = {version="^0.1", default-features=false}

async-trait = "^0.1.80"
actix-http = "^3.6"
actix-service = "^2"
actix-web = {version="^4.5.1", features=["macros"]}
sha2 = {version="^0.10", default-features=true}

ecommerce-common = {version="^0.1.0", path="../common/rust"}

[[test]]
name = "integration"
path = "./tests/integration/mod.rs"
test = true

[[test]]
name = "unit"
path = "./tests/unit/mod.rs"
test = true
