[project]
name = "store-front"
version = "0.1.2"
requires-python = ">=3.12"
dependencies = [
    "fastapi >= 0.101.1",
    "pydantic[email] >= 2.10.2",
    "uvicorn >= 0.23.2",
    "PyJWT >= 2.8.0",
    "SQLAlchemy >= 2.0.29",
    "alembic >= 1.13.1",
    "asyncmy >= 0.2.9",
    "celery >= 5.4.0",
    "cryptography >= 42.0.0",
    "setuptools >= 69.5.1",
] # end of dependencies

[tool.setuptools.package-dir]
store = "./src"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[options]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
# tracking relevant issue:
# https://github.com/pytest-dev/pytest-asyncio/issues/924

[tool.ruff]
target-version = "py312"

