[project]
name = "store-front"
version = "0.1.3"
requires-python = ">=3.13"

[tool.setuptools.package-dir]
store = "./src"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[options]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
# tracking relevant issue:
# https://github.com/pytest-dev/pytest-asyncio/issues/924

[tool.ruff]
target-version = "py313"
