[package]
name = "order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.29", features=["rt", "rt-multi-thread", "net"]}
serde = {version="1.0", features=["derive", "rc"]}
serde_json = "1.0"
tower-service = "0.3"
hyper = {version="0.14", features=["server", "runtime", "tcp", "http1"]}
axum = {version="0.6.19", features=["macros"]}
log = "0.4"
tracing = {version="0.1", default-features=true}
tracing-subscriber = {version="0.3.17", features=["std", "fmt", "registry"]}
tracing-appender   = "0.2.2"
# jsonwebtoken = "8.3"


