[package]
name = "order"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.29", features=["rt", "rt-multi-thread", "net", "macros"]}
serde = {version="1.0", features=["derive", "rc"]}
serde_json = "1.0"
async-trait = "0.1.72"
tower-service = "0.3"
hyper = {version="0.14", features=["server", "runtime", "tcp", "http1"]}
axum = {version="0.6.19", features=["macros"]}
chrono  = {version="0.4.31", features=["std", "alloc", "serde"]}
log = "0.4"
## `uuid` internally uses `rand` without making the random-sequence-generating
## function public, this app has to explicitly import the crate
rand = "0.8"
uuid = {version="1.5.0", features=["v8"]}
tracing = {version="0.1", default-features=true}
tracing-subscriber = {version="0.3.17", features=["std", "fmt", "registry"]}
tracing-appender   = "0.2.2"
regex = "1.9.6"
# jsonwebtoken = "8.3"

[[test]]
name = "unittest"
path = "./tests/unit/mod.rs"
test = true

